<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mobilprogramlama.ders.berkay.hm1_quiz.activity.MenuActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_menuActivity_play"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/menuActivity_play"
        android:onClick="btn_menuActivity_play_onClick"/>

    <Button
        android:id="@+id/btn_menuActivity_scores"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/menuActivity_scores"
        android:onClick="btn_menuActivity_scores_onClick"/>

</LinearLayout>
